# platform-infra

./: .env.development.enc  .env.enc  .env.example  .env.production.enc  .gitignore  .sops.yaml  ALERTING_RUNBOOK.md  BACKUP_RUNBOOK.md  Makefile  README.md  SECRETS_RUNBOOK.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
infra/alertmanager/: alertmanager.yml.tmpl
infra/caddy/: Caddyfile
infra/grafana/dashboards/: api-health.json  db-redis-health.json  stream-pipeline.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: datasources.yaml
infra/keycloak/: Dockerfile
infra/litellm/: litellm_config.yaml
infra/otel/: collector-config.yaml
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: alerts.yml
scripts/: cutover-cue.sh  deploy.sh  migrate-keycloak.sh  migrate-minio.sh  migrate-postgres.sh  restore-drill.sh  setup-sops.sh  wal-restore-drill.sh
services/alertmanager/: Dockerfile  entrypoint.sh
services/backup/: Dockerfile  backup.sh  crontab  entrypoint.sh
services/mcp/: Dockerfile  pyproject.toml
services/mcp/app/: auth.py  config.py  main.py
services/mcp/app/namespaces/common/: __init__.py  audio.py  email.py  search.py  sms.py
services/postgres/: Dockerfile  base-backup.sh  entrypoint.sh  wal-g.cron
terraform/: cue.tf  main.tf  platform-mcp.tf  variables.tf
terraform/modules/project/: main.tf  outputs.tf  variables.tf
terraform/modules/project/templates/: caddy-route.tpl  env.tpl
terraform/projects/cue/: main.tf  variables.tf
